--- a/Lab_Programacioon 6º2/index2.html
+++ b/Lab_Programacioon 6º2/index2.html
@@ -12,7 +12,8 @@
 
         //Mensaje emergente
         alert("HOLAAAAAAAAAAAAAAAAAAAA");
-        
+
+        //consola XD
         console.log("prueba de javascript")
         let nombre = "Thiago "  
         let apellido = "Lo Balbo"
@@ -35,13 +36,21 @@
         document.write("<br\>")
         document.write ("El resultado es: ",resultado)
 
+        //comentar secciones se hace colocando "/*" al principio y al final se pone "*/"
         
+        //el input que se usa para java es: "prompt"
+        nombre1 = prompt("ingrese su nombre: ");
+        edad = prompt("ingrese su edad: ");
+        document.write ("hola ");
+        document.write(nombre);
+        document.write(" asi que tenes ");
+        document.write(edad);
+        document.write(" años");
+
 
 
 
     </script>
-
-
 
 </body>
 </html>
