--- a/Lab_Programacioon 6º2/index2.html
+++ b/Lab_Programacioon 6º2/index2.html
@@ -35,7 +35,7 @@
         let resultado = num1 + num2
         document.write("<br\>")
         document.write ("El resultado es: ",resultado)
-
+        // para convertir caracteres a enteros se usa: "parseint"
         //comentar secciones se hace colocando "/*" al principio y al final se pone "*/"
         
         //el input que se usa para java es: "prompt"
