pagina_listas_imagenes.html

--- a/Lab_Programacioon 6º2/pagina_listas_imagenes.html
+++ b/Lab_Programacioon 6º2/pagina_listas_imagenes.html
@@ -24,7 +24,8 @@
         <li><a href="https://youtu.be/4Lq8cLN-60s?si=sZQozpTgjBGcdovE">Polonia vs Brasil</a></li>
 
     </ul>
-
+    <button>hola</button>
+    <button>adios</button>
 
 </body>
 </html>
