pagina_listas_imagenes.html

--- a/Lab_Programacioon 6º2/pagina_listas_imagenes.html
+++ b/Lab_Programacioon 6º2/pagina_listas_imagenes.html
@@ -24,8 +24,14 @@
         <li><a href="https://youtu.be/4Lq8cLN-60s?si=sZQozpTgjBGcdovE">Polonia vs Brasil</a></li>
 
     </ul>
+    
+<!-- BOTONES -->
     <button>hola</button>
     <button>adios</button>
+    
+    <!-- ETIQUETAS EN LINEA-->
+    <h1>loletorero</h1>
+    <h1>mamolengo</h1>
 
 </body>
 </html>
