--- a/Lab_Programacioon 6º2/TrabajosPracticos/Continuidad.html
+++ b/Lab_Programacioon 6º2/TrabajosPracticos/Continuidad.html
@@ -14,13 +14,26 @@
     </header>
 
     <main>
-    <h3>Este soy yo (Avatar)</h3>
+    <div id="yo">Este soy yo (Avatar)</div>
     </main>
     <p><img src="/Lab_Programacioon 6º2/TrabajosPracticos/Imagenes/25cdaba1-246c-4039-b832-d3fe037d20c5.jpeg" width="15%" height="15%" alt="yo"></p>
 
-    <button class="SobreMi"><a href="/Lab_Programacioon 6º2/TrabajosPracticos/SobreMi.html" target="_blank">Sobre mi</a></button> <button>Proyectos</button> <button>Contacto</button>
+    <button class="SobreMi"><a href="/Lab_Programacioon 6º2/TrabajosPracticos/SobreMi.html" target="_blank">Sobre mi</a></button>
+    
+    <button><a href="/Lab_Programacioon 6º2/TrabajosPracticos/Proyectos.html" target="_blank">Proyectos</a></button>
+    
+    <button><a href="/Lab_Programacioon 6º2/TrabajosPracticos/Contacto.html" target="_blank">Contacto</a></button>
 </center>
 </div>
 
+<footer>
+    <div class="contenedor">
+    <p>Si quieres saber mas sobre mi, puedes visitar mis redes sociales.</p>
+    <p>Facebook: <a href="https://www.facebook.com/tu.perfil" target="_blank">Tu Perfil</a></p>
+    <p>Twitter: <a href="https://twitter.com/tu_perfil" target="_blank">Tu Perfil</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/tu_perfil" target="_blank">Tu Perfil</a></p>
+</div>
+</footer>
+    <div id="Presentacion"><p>© 2025 Mi Presentacion como programador</p></div>  
 </body>
 </html>
