--- a/Lab_Programacioon 6º2/TrabajosPracticos/Proyectos.html
+++ b/Lab_Programacioon 6º2/TrabajosPracticos/Proyectos.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre mi</title>
+    <title>Document</title>
 </head>
 <body>
-    <center>
-        <H1>Sobre mi</H1>
-    </center>
     
-    <p></p>
-
 </body>
 </html>
