--- a/Lab_Programacioon 6º2/TrabajosPracticos/Continuidad.html
+++ b/Lab_Programacioon 6º2/TrabajosPracticos/Continuidad.html
@@ -22,13 +22,14 @@
     
     <button><a href="/Lab_Programacioon 6º2/TrabajosPracticos/Proyectos.html" target="_blank">Proyectos</a></button>
     
-    <button><a href="/Lab_Programacioon 6º2/TrabajosPracticos/Contacto.html" target="_blank">Contacto</a></button>
+    <button><a href="/Lab_Programacioon 6º2/TrabajosPracticos/Contacto.html">Contacto</a></button>
 </center>
 </div>
 
 <footer>
     <div class="contenedor">
     <p>Si quieres saber mas sobre mi, puedes visitar mis redes sociales.</p>
+    <p>instagram: <a href="https://www.instagram.com/lobalbothiago?igsh=ZzFuZmkzd21jdHo5" target="_blank">Tu Perfil</a></p>
     <p>Facebook: <a href="https://www.facebook.com/tu.perfil" target="_blank">Tu Perfil</a></p>
     <p>Twitter: <a href="https://twitter.com/tu_perfil" target="_blank">Tu Perfil</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/tu_perfil" target="_blank">Tu Perfil</a></p>
